ops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scimappdeployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: gopalsub/scim-app:cdfd56c4438276f55b7b95375ed928a8d8540afb
        ports:
        - containerPort: 80
