ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainservice
  labels:
    app: app
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
